# jf-linux-trainings

./: CMakeLists.txt  README.md  TODO.rst  meson.build
cmake/: nodes.cmake
docs/: notebook.ipynb  nparray.ipynb
lib/: meson.build
lib/jf/: can.cc  can.h  eventfd.cc  eventfd.h  eventfd.rst  eventloop-epoll.cc  eventloop-epoll.h  eventloop-select.cc  eventloop-select.h  eventloop.h  exception.h  fd.cc  fd.h  graceful-termination.cc  graceful-termination.h  ip4.cc  ip4.h  meson.build  pipe.cc  pipe.h  posix-message-queue.cc  posix-message-queue.h  shared-event-queue.h  shared-queue.h  signalfd.cc  signalfd.h  socketpair.cc  socketpair.h  system-error.cc  system-error.h  tcp4.cc  tcp4.h  tid.h  timerfd.cc  timerfd.h  timespec.h  work-queue.cc  work-queue.h
lib/jf-eventloop/: eventloop-epoll.cc  eventloop-select.cc  eventloop-select.h  eventloop.h
lib/jf-fd/: fd.cc  meson.build  socketpair.cc  socketpair.h
programs/: CMakeLists.txt  _timer.cc  profile-timer-multithreaded.cc  profile-timer-singlethreaded.cc
src/: CMakeLists.txt  meson.build
src/jf-eventloop/: CMakeLists.txt  dispatcher.cc  dispatcher.h  eventloop-epoll.cc  eventloop-epoll.h  eventloop-select.cc  eventloop-select.h  eventloop.h  meson.build
src/jf-fd/: CMakeLists.txt  fd.cc  fd.h  timerfd.cc  timerfd.h  timespec.h
topics/: CMakeLists.txt  meson.build
topics/can/: can-echo-many-epoll.cc  can-echo-many.cc  can-recv-many.cc  can-recv-one.cc  can-send-hello.cc  can.rst  meson.build
topics/context-switch-profiling/: CMakeLists.txt  README.rst  _timer.cc  _timer.h  jf-timer-stats.py  jf_figure.py  jf_profile_utils.py  jf_stats.py  meson.build  plot.py  profile-timer-singlethreaded.cc
topics/eventloop/: eventloop-ros-and-a-timer.cc  eventloop-two-timers.cc  meson.build
topics/message-passing-components/: _protocols.h  component-A-client.cc  component-A.cc  component-B.cc  meson.build  setup-components.cc  teardown-components.cc
topics/shared-memory/: cat-mmap.cc  meson.build  mmap-file.cc  mmap-uint32-inc.cc  mmap-uint32-watch.cc
topics/tcp/: meson.build  tcp-client.cc  tcp-echo-server.cc  tcp.rst
topics/work-queue/: meson.build  work-queue-simple.cc
trainings/: README.rst  meson.build
trainings/2019-10-28/: ITG-Project.ipynb  LiveHacking.ipynb  README.rst  notes.rst
trainings/2019-10-28/Misc/: eval-argv.py  listcomprehension-generatorexpression.py
trainings/2019-10-28/Python-Code/: michi-switch-upgrade-von-pyexec.py
trainings/2019-10-28/SwitchZeug/: switch.py
trainings/2019-10-28/switch-zeug/: 01-der-anfang.py  02-michi-parse.py  20-create-schema.py  21-insert-switch.py  22-report-switch.py  error.py  michi.py  switch.py  tests.py
trainings/2019-10-28/switch-zeug/data/: ifAdminStatus.txt
trainings/2019-11-12/: BigPlan.html  BigPlan.ipynb  BigPlan.slides.html  LiveHacking.html  Parsing-A-File.html
trainings/2019-11-12/code/franziska/: dat-franziska.py
trainings/2020-01-10/: Proposal.rst  Screenplay.rst
trainings/2020-01-10/Code/shm/: 010-mmap.cc  020-shm-create.cc
unittests/: CMakeLists.txt  eventloop-suite.cc  graceful-eventloop-termination-suite.cc  jf-test.cc  meson.build  posix-message-queue-suite.cc  shared-event-queue-suite.cc  tcp4-suite.cc  work-queue-suite.cc
