jf_lib = library(
    'jf',
    [
        'fd.h',
        'fd.cc',
        'socketpair.h',
        'socketpair.cc',
        'eventloop.h',
        'eventloop-select.h',
        'eventloop-select.cc',
        'eventloop-epoll.h',
 	'eventloop-epoll.cc',
        'timespec.h',
        'timerfd.h',
        'timerfd.cc',
	'work-queue.h',
	'work-queue.cc',
        'posix-message-queue.h',
	'posix-message-queue.cc',
    ],
    install: true,
    dependencies: [thread_dep, librt],
)
