jf_lib = library(
    'jf',
    [
        'fd.h',
        'fd.cc',
        'socketpair.h',
        'socketpair.cc',
        'pipe.h',
        'pipe.cc',
        'eventloop.h',
        'eventloop-select.h',
        'eventloop-select.cc',
        'eventloop-epoll.h',
 	'eventloop-epoll.cc',
        'graceful-termination.h',
        'graceful-termination.cc',
        'timespec.h',
        'timerfd.h',
        'timerfd.cc',
        'signalfd.h',
        'signalfd.cc',
	'work-queue.h',
	'work-queue.cc',
        'posix-message-queue.h',
	'posix-message-queue.cc',
    ],
    install: true,
    dependencies: [thread_dep, librt],
)
