jf_lib = library(
    'jf',
    [
        'system-error.h',
        'system-error.cc',
        'fd.h',
        'fd.cc',
        'socketpair.h',
        'socketpair.cc',
        'pipe.h',
        'pipe.cc',
        'eventloop.h',
        'eventloop-select.h',
        'eventloop-select.cc',
        'eventloop-epoll.h',
 	'eventloop-epoll.cc',
        'graceful-termination.h',
        'graceful-termination.cc',
        'timespec.h',
        'timerfd.h',
        'timerfd.cc',
        'signalfd.h',
        'signalfd.cc',
        'eventfd.h',
        'eventfd.cc',
	'work-queue.h',
	'work-queue.cc',
        'posix-message-queue.h',
	'posix-message-queue.cc',
        'ip4.h',
        'ip4.cc',
	'tcp4.h',
	'tcp4.cc',
	'can.h',
	'can.cc',
    ],
    install: true,
    dependencies: [thread_dep, librt],
)
