executable(
    'jf-component-A',
    ['component-A.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
)

executable(
    'jf-component-B',
    ['component-B.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
)

executable(
    'jf-component-A-client',
    ['component-A-client.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
)

executable(
    'jf-setup-components',
    ['setup-components.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
)
