executable(
    'jf-component-A',
    ['component-A.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
    install: true,
)

executable(
    'jf-component-B',
    ['component-B.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
    install: true,
)

executable(
    'jf-component-A-client',
    ['component-A-client.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
    install: true,
)

executable(
    'jf-setup-components',
    ['setup-components.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
    install: true,
)

executable(
    'jf-teardown-components',
    ['teardown-components.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
    install: true,
)
