executable(
    'jf-cat-mmap',
    ['cat-mmap.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
    install: true,
)

executable(
    'jf-mmap-uint32-inc',
    ['mmap-uint32-inc.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
    install: true,
)

executable(
    'jf-mmap-uint32-watch',
    ['mmap-uint32-watch.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
    install: true,
)
