executable(
    'jf-tcp-client',
    ['tcp-client.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
    install: true,
)

executable(
    'jf-tcp-echo-server',
    ['tcp-echo-server.cc'],
    include_directories: common_includedir,
    link_with: [jf_lib],
    install: true,
)

